--- a/src/styles.css
+++ b/src/styles.css
@@ -45,6 +45,12 @@ body {
   list-style-type: none;
   padding: 0;
 }
+.corelation {
+  margin-top: 20px;
+  margin-left: 90px;
+  margin-bottom: 40px;
+  color: #fff;
+}
 
 .results li {
   margin: 5px 0;
